--- a/force-app/main/default/lwc/objectAttachedImage/objectAttachedImage.css
+++ b/force-app/main/default/lwc/objectAttachedImage/objectAttachedImage.css
@@ -1,3 +1,9 @@
 .hidden {
     display:none!important;
 }
+
+div.image-wrapper {
+    display: inline-block;
+    width: 100%;
+    text-align:center;
+}
